Copy package references to output

--- a/SRTPluginUIRECVXDirectXOverlay/SRTPluginUIRECVXDirectXOverlay.csproj
+++ b/SRTPluginUIRECVXDirectXOverlay/SRTPluginUIRECVXDirectXOverlay.csproj
@@ -19,6 +19,7 @@
     <AssemblyVersion>0.9.1.0</AssemblyVersion>
     <LangVersion>latest</LangVersion>
     <EnableDefaultApplicationDefinition>false</EnableDefaultApplicationDefinition>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <OutputPath>bin\$(Configuration)\$(AssemblyName)\</OutputPath>
